# filesystem-trees

./: LICENSE  README.md  directory-trees.cabal  filesystem-trees.cabal
src/System/Directory/: Tree.hs
src/System/File/: Tree.hs
tests/: WalkHome.hs  filter.hs
