Name: directory-trees
Version: 0
Synopsis: Recursively manipulate and traverse directories as rose trees.
Cabal-Version: >= 1.6
License: BSD3
License-File: LICENSE
Author: Adam Curtis
Maintainer: acurtis@spsu.edu
Build-Type: Simple

library
  hs-source-dirs: src
  ghc-options: -Wall
  if impl(ghc >= 7.2) 
    default-extensions: Trustworthy
  build-depends:   base == 4.*
                 , directory
                 , filepath
                 , unix
                 , containers >= 0.1 && < 0.6
                 , data-lens
                 , dlist
                 , mtl
                 , data-default
                 , cond == 0.0.*
  exposed-modules: System.Directory.Tree